# aimarket-courses

./: .gitignore  CONTRIBUTORS.md  README.md  SECURITY.md  catalog.yaml
3d-data-viz-course/: README.md  course.config.json  pyproject.toml
3d-data-viz-course/courselib/: __init__.py  certificate.py  exercises.py  viz.py
3d-data-viz-course/docs/: step-by-step.es.md  step-by-step.md  step-by-step.ru.md
3d-data-viz-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
3d-data-viz-course/labs/: lab01_health_probe.py  lab02_topology_graph.py  lab03_reputation_peers.py  lab04_lumen_scores.py  lab05_r3f_scenes.py  run_exercises.py
3d-data-viz-course/notebooks/: lab01_health_probe.ipynb  lab02_topology_graph.ipynb  lab03_reputation_peers.ipynb  lab04_lumen_scores.ipynb  lab05_r3f_scenes.ipynb
3d-data-viz-course/scripts/: labs_to_notebooks.py
3d-data-viz-course/site_assets/: progress.js
3d-data-viz-course/tests/: test_exercises.py  test_labs_smoke.py  test_viz.py
agent-economy-course/: README.md  conftest.py  course.config.json  pyproject.toml
agent-economy-course/courselib/: __init__.py  economy.py  exercises.py  hub_lite.py  orchestration.py  protocol.py  trust.py
agent-economy-course/docs/: step-by-step.es.md  step-by-step.md  step-by-step.ru.md
agent-economy-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
agent-economy-course/labs/: lab01_protocol_overview.py  lab02_hub_discover.py  lab03_escrow_channel.py  lab04_reputation_trust.py  lab05_publish_capability.py  lab06_paid_capability_capstone.py  run_exercises.py
agent-economy-course/notebooks/: lab01_protocol_overview.ipynb  lab02_hub_discover.ipynb  lab03_escrow_channel.ipynb  lab04_reputation_trust.ipynb  lab05_publish_capability.ipynb  lab06_paid_capability_capstone.ipynb
agent-economy-course/site_assets/: progress.js
agent-economy-course/tests/: test_economy.py  test_hub.py  test_i18n.py  test_labs_smoke.py  test_protocol.py  test_trust.py
ai-factory-course/: README.md  course.config.json  pyproject.toml
ai-factory-course/courselib/: __init__.py  exercises.py  factory.py
ai-factory-course/docs/: README.md  step-by-step.es.md  step-by-step.md  step-by-step.ru.md
ai-factory-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
ai-factory-course/labs/: lab01_pipeline_overview.py  lab02_pipeline_status.py  lab03_products_catalog.py  lab04_orchestrator_stages.py  lab05_factory_capstone.py  run_exercises.py
ai-factory-course/notebooks/: lab01_pipeline_overview.ipynb  lab02_pipeline_status.ipynb  lab03_products_catalog.ipynb  lab04_orchestrator_stages.ipynb  lab05_factory_capstone.ipynb
ai-factory-course/site_assets/: progress.js
ai-factory-course/tests/: test_exercises.py  test_factory.py  test_labs_smoke.py
mathematics-of-trust-course/: README.md  course.config.json  pyproject.toml
mathematics-of-trust-course/courselib/: __init__.py  certificate.py  exercises.py  oracle_paths.py  trace.py  trust.py
mathematics-of-trust-course/docs/: step-by-step.es.md  step-by-step.md  step-by-step.ru.md
mathematics-of-trust-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
mathematics-of-trust-course/labs/: lab01_keystone_nodes.py  lab02_trust_pagerank.py  lab03_spectral_cut.py  lab04_consensus_aggregate.py  lab05_sandpile_cascade.py  lab06_trust_audit.py  run_exercises.py
mathematics-of-trust-course/notebooks/: lab01_keystone_nodes.ipynb  lab02_trust_pagerank.ipynb  lab03_spectral_cut.ipynb  lab04_consensus_aggregate.ipynb  lab05_sandpile_cascade.ipynb  lab06_trust_audit.ipynb
mathematics-of-trust-course/site_assets/: progress.js
mathematics-of-trust-course/tests/: test_exercises.py  test_i18n.py  test_labs_smoke.py  test_trust.py
mcp-security-course/: README.md  course.config.json  pyproject.toml
mcp-security-course/courselib/: __init__.py  certificate.py  exercises.py  lumen.py  oracle_paths.py  warden.py
mcp-security-course/docs/: README.md  step-by-step.es.md  step-by-step.md  step-by-step.ru.md
mcp-security-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
mcp-security-course/labs/: lab01_threat_model.py  lab02_static_scan.py  lab03_lumen_score.py  lab04_owner_lock.py  lab05_warden_capstone.py  run_exercises.py
mcp-security-course/notebooks/: lab01_threat_model.ipynb  lab02_static_scan.ipynb  lab03_lumen_score.ipynb  lab04_owner_lock.ipynb  lab05_warden_capstone.ipynb
mcp-security-course/site_assets/: progress.js
mcp-security-course/tests/: test_exercises.py  test_labs_smoke.py  test_lumen.py  test_warden.py
optimization-with-proofs-course/: README.md  course.config.json  pyproject.toml
optimization-with-proofs-course/courselib/: __init__.py  certificate.py  exercises.py  optimization.py  oracle_paths.py
optimization-with-proofs-course/docs/: README.md  step-by-step.es.md  step-by-step.md  step-by-step.ru.md
optimization-with-proofs-course/i18n/: en.json  es.json  fr.json  ru.json  zh.json
optimization-with-proofs-course/labs/: lab01_colony_tsp.py  lab02_kantor_transport.py  lab03_fermat_route.py  lab04_gauss_gp.py  lab05_proof_capstone.py  run_exercises.py
optimization-with-proofs-course/notebooks/: lab01_colony_tsp.ipynb  lab02_kantor_transport.ipynb  lab03_fermat_route.ipynb  lab04_gauss_gp.ipynb  lab05_proof_capstone.ipynb
optimization-with-proofs-course/site_assets/: progress.js
optimization-with-proofs-course/tests/: test_exercises.py  test_labs_smoke.py  test_optimization.py
orchestration-course/: README.md  course.config.json  pyproject.toml
orchestration-course/courselib/: certificate.py  economy.py  i18n.py
orchestration-course/docs/: README.md  step-by-step.es.md  step-by-step.md  step-by-step.ru.md
orchestration-course/i18n/: fr.json  ru.json  zh.json
orchestration-course/labs/: lab02_topologies.py  lab04_discover_invoke.py  lab07_receipt_verify.py  (+1 more)
physics-inspired-computing-course/: README.md  course.config.json  pyproject.toml
smart-contracts-course/: README.md  course.config.json  pyproject.toml
verifiable-randomness-course/: README.md  course.config.json  pyproject.toml
(+117 files in other folders)
