[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-economy-course"
version = "0.1.0"
description = "Hands-on course on AIMarket Protocol v2, SDK, Hub, escrow, channels, and monetizing agent capabilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AI-Factory" }]
dependencies = []

[project.urls]
Homepage = "https://alexar76.github.io/aimarket-courses/agent-economy-course/"
Documentation = "https://alexar76.github.io/aimarket-courses/agent-economy-course/"
Repository = "https://github.com/alexar76/aimarket-courses"
Issues = "https://github.com/alexar76/aimarket-courses/issues"

[project.optional-dependencies]
hub-lite = [
    "uvicorn>=0.34",
    "httpx>=0.28",
    "fastapi>=0.136",
]
sandbox = [
    "uvicorn>=0.34",
    "httpx>=0.28",
    "fastapi>=0.136",
    "aimarket-agent>=2.1.0",
    "aimarket-hub @ git+https://github.com/alexar76/aimarket-hub.git",
]
dev = ["pytest>=8"]
all = ["agent-economy-course[hub-lite,sandbox,dev]"]

[tool.setuptools.packages.find]
include = ["courselib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
