[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-course"
version = "0.1.0"
description = "Hands-on course on MCP threat models, static scanning, and the WARDEN firewall for agent safety."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AI-Factory" }]
dependencies = []

[project.urls]
Homepage = "https://alexar76.github.io/aimarket-courses/mcp-security-course/"
Documentation = "https://alexar76.github.io/aimarket-courses/mcp-security-course/"
Repository = "https://github.com/alexar76/aimarket-courses"
Issues = "https://github.com/alexar76/aimarket-courses/issues"

[project.optional-dependencies]
oracles = [
    "numpy>=1.24",
]
dev = ["pytest>=8"]
all = ["mcp-security-course[oracles,dev]"]

[tool.setuptools.packages.find]
include = ["courselib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
