[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-with-proofs-course"
version = "0.1.0"
description = "Hands-on course on combinatorial and continuous optimization with verifiable quality certificates from live AIMarket oracles."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AI-Factory" }]
dependencies = []

[project.urls]
Homepage = "https://alexar76.github.io/aimarket-courses/optimization-with-proofs-course/"
Documentation = "https://alexar76.github.io/aimarket-courses/optimization-with-proofs-course/"
Repository = "https://github.com/alexar76/aimarket-courses"
Issues = "https://github.com/alexar76/aimarket-courses/issues"

[project.optional-dependencies]
oracles = [
    "numpy>=1.24",
]
dev = ["pytest>=8"]
all = ["optimization-with-proofs-course[oracles,dev]"]

[tool.setuptools.packages.find]
include = ["courselib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
